# volum-app

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
assets/: index-DtnXocqx.js  index-DvKneiWo.css
src/: App.vue  constants.ts
src/__tests__/: App.spec.ts  FileUpload.spec.ts  FloorPlanCanvas.spec.ts  ThreeScene.spec.ts  useFloorPlan.spec.ts  useThreeScene.spec.ts
src/components/: FileUpload.vue  FloorPlanCanvas.vue  ThreeScene.vue
src/composables/: useFloorPlan.ts  useThreeScene.ts  useWallDetection.ts
src/types/: index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
